# telegram-claude-code

./: .gitignore  CLAUDE.md  SPEC.md  claude_subprocess.py  config.yaml.example  pyproject.toml  stream_handler.py  task_queue.py  telegram_claude_poc.py
docs/: kaizen-design.md
docs/plans/: 2026-04-22-telegram-claude-poc-design.md
src/company_agent/: __init__.py  config.py  event_bus.py  main.py  task_queue.py
src/company_agent/agents/: __init__.py  base.py  claude_adapter.py  kilocode_adapter.py  pytest_adapter.py
src/company_agent/handlers/: telegram_handler.py
src/company_agent/reporters/: telegram_reporter.py
src/company_agent/workflow/: __init__.py  approve_gate.py  clarification.py  orchestrator.py  planner.py
src/poc_dev_flow_agent/: __init__.py  bot.py  claude_subprocess.py  stream_handler.py  task_queue.py
src/telegram_claude_agent/: __init__.py  bot.py
src/telegram_claude_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  pytest.ini  test_bot.py
tests/integration/: __init__.py  test_subprocess_flow.py
tests/unit/: __init__.py  test_agents.py  test_approve_gate.py  test_bot_integration.py  test_clarification.py  test_claude_adapter.py  test_claude_adapter_clarification.py  test_event_bus.py  test_orchestrator_deps.py  test_planner.py  test_stream_handler.py  test_task_queue.py
